--- a/homepage/website02/index.html
+++ b/homepage/website02/index.html
@@ -263,7 +263,9 @@
     </section>
 
     <footer class="footer">
-      <div class="footer__logo"></div>
+      <div class="footer__logo">
+        <img src="./images/logo.svg" alt="brand">
+      </div>
       <div class="footer__list">
         <div class="footer__item">
           <h5 class="footer__item__heading">Product</h5>
