--- a/homepage/website03/index.html
+++ b/homepage/website03/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link id="theme-style" rel="stylesheet" href="./assets/default.css">
+  <link id="theme-style" rel="stylesheet" href="./assets/main.css">
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -17,14 +17,14 @@
 </head>
 <body>
   <div class="top-bg"></div>
-  <div class="container p-5">
+  <div class="container p-5 px-4">
     <header class="header d-flex justify-content-between align-items-start flex-column flex-md-row mb-4">
       <div class="header-text">
         <h3 class="fs-2 heading">Social Media Dashboard</h3>
         <h6 class="fs-6 main-text">Total Followers: 23,004</h6>
       </div>
       <div class="header-theme main-text fw-bolder d-flex gap-3 w-100 mw-md-auto justify-content-between justify-content-md-end">
-        <span class="align-self-center">Dark Mode</span>
+        <span class="align-self-center fs-6">Dark Mode</span>
         <label class="toggle-control">
           <input id="theme-control" type="checkbox">
           <span class="control"></span>
@@ -254,7 +254,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">yuenu</a>.
+      Coded by <a href="https://github.com/yuenu">yuenu</a>.
     </div>
   </div>
   
