--- a/line-page/index.html
+++ b/line-page/index.html
@@ -14,7 +14,7 @@
 			</a>
 		</header>
 
-		<section class="kv">
+		<section id="kv" class="kv">
 			<ul class="kvList"></ul>
 		</section>
 	</body>
