--- a/medium/rotate-animation/index.html
+++ b/medium/rotate-animation/index.html
@@ -12,6 +12,11 @@
       <img src="./mountain-1.jpg" alt="" />
       <img src="./mountain-2.jpg" alt="" />
       <img src="./mountain-3.jpg" alt="" />
+
+      <div class="bottom">
+        <img src="./search.svg" alt="" />
+        <span class="text">Searching...</span>
+      </div>
     </main>
     <script src="./app.js"></script>
   </body>
