--- a/frontendmentor/interactive-card-details-form-main/index.html
+++ b/frontendmentor/interactive-card-details-form-main/index.html
@@ -13,39 +13,68 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
-  0000 0000 0000 0000
+  <main class="main">
+    <div class="card-front">
+      <img src="./images/card-logo.svg" alt="">
+      0000 0000 0000 0000
   Jane Appleseed
   00/00
 
-  000
+    </div>
+    <div class="card-back">
+      000
+    </div>
+    
+    <form class="container">
+      <div class="item">
+        <label class="item-label">
+          Cardholder Name
+        </label>
+        <input class="item-input" type="text">
+      </div>
+      <div class="item">
+        <label class="item-label" placeholder="e.g. Jane Appleseed">
+          Card Number
+        </label>
+        <input class="item-input" type="text" placeholder="e.g. 1234 5678 9123 0000">
+      </div>
+      <div class="item">
+        <label class="item-label" placeholder="e.g. Jane Appleseed">
+          Card Number
+        </label>
+        <input class="item-input" type="text" placeholder="e.g. 1234 5678 9123 0000">
+      </div>
+      <div class="item item-secret">
+        <label class="item-label" placeholder="e.g. Jane Appleseed">
+          Exp. Date (MM/YY)
+        </label>
+        <input class="item-input" type="text" placeholder="MM">
+        <input class="item-input" type="text" placeholder="YY">
+        <label class="item-label" placeholder="e.g. Jane Appleseed">
+          CVC
+        </label>
+        <input class="item-input" type="text" placeholder=" e.g. 123">
+      </div>
+      <button type="submit">Confirm</button>
+    </form>
 
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-
-  <!-- Completed state start -->
-
-  Thank you!
-  We've added your card details
-  Continue
+    <div class="complete-container">
+      <img src="./images/icon-complete.svg" alt="">
+      <div class="heading">Thank you!</div>
+      <p>We've added your card details</p>
+      <button type="button">Continue</button>
+    </div>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/yuenu">yuenu</a>.
   </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
